Added some AP endpoints
