# swagger.yml
@@ -12,372 +12,176 @@ basePath: /api
 
 # Paths supported by the server application
 paths:
-  /people:
+  /events:
     get:
-      operationId: people.read_all
+      operationId: events.read_all
       tags:
-        - People
-      summary: Read the entire set of people, sorted by last name
-      description: Read the entire set of people, sorted by last name
+        - Events
+      summary: Read the entire set of events, sorted by furthest first
+      description: Read the entire set of events, sorted by furthest first
       responses:
         200:
-          description: Successfully read people set operation
+          description: Successfully read events set operation
           schema:
             type: array
             items:
               properties:
-                person_id:
+                event_id:
                   type: integer
-                  description: Id of the person
-                fname:
+                  description: Id of the event
+                event_name:
                   type: string
-                  description: First name of the person
-                lname:
+                  description: Name of the event
+                event_description:
                   type: string
-                  description: Last name of the person
-                timestamp:
+                  description: Description of the event
+                event_date:
                   type: string
-                  description: Create/Update timestamp of the person
-                notes:
-                  type: array
-                  items:
-                    properties:
-                      person_id:
-                        type: integer
-                        description: Id of person this note is associated with
-                      note_id:
-                        type: integer
-                        description: Id of this note
-                      content:
-                        type: string
-                        description: content of this note
-                      timestamp:
-                        type: string
-                        description: Create/Update timestamp of this note
+                  description: Date of the event in word format
+                event_start:
+                  type: string
+                  description: Start time of event
+                event_end:
+                  type: string
+                  description: End time of event
+                event_going:
+                  type: integer
+                  description: Number going to event
+                event_interested:
+                  type: integer
+                  description: Number interested in event
+                event_status:
+                  type: string
+                  description: Whether event is past, upcoming or live
 
-    post:
-      operationId: people.create
-      tags:
-        - People
-      summary: Create a person
-      description: Create a new person
-      parameters:
-        - name: person
-          in: body
-          description: Person to create
-          required: True
-          schema:
-            type: object
-            properties:
-              fname:
-                type: string
-                description: First name of person to create
-              lname:
-                type: string
-                description: Last name of person to create
-      responses:
-        201:
-          description: Successfully created person
-          schema:
-            properties:
-              person_id:
-                type: integer
-                description: Id of the person
-              fname:
-                type: string
-                description: First name of the person
-              lname:
-                type: string
-                description: Last name of the person
-              timestamp:
-                type: string
-                description: Creation/Update timestamp of the person record
-
-  /people/{person_id}:
+  /events/{event_id}:
     get:
-      operationId: people.read_one
+      operationId: events.read_one
       tags:
-        - People
-      summary: Read one person
-      description: Read one person
+        - Events
+      summary: Read one event
+      description: Read one event
       parameters:
-        - name: person_id
+        - name: event_id
           in: path
-          description: Id of the person to get
+          description: Id of the event to get
           type: integer
           required: True
       responses:
         200:
-          description: Successfully read person from people data operation
+          description: Successfully read event from event data operation
           schema:
             type: object
             properties:
-              person_id:
-                type: string
-                description: Id of the person
-              fname:
-                type: string
-                description: First name of the person
-              lname:
-                type: string
-                description: Last name of the person
-              timestamp:
-                type: string
-                description: Creation/Update timestamp of the person record
-              notes:
-                type: array
-                items:
-                  properties:
-                    person_id:
-                      type: integer
-                      description: Id of person this note is associated with
-                    note_id:
-                      type: integer
-                      description: Id of this note
-                    content:
-                      type: string
-                      description: content of this note
-                    timestamp:
-                      type: string
-                      description: Create/Update timestamp of this note
-
-    put:
-      operationId: people.update
-      tags:
-        - People
-      summary: Update a person
-      description: Update a person
-      parameters:
-        - name: person_id
-          in: path
-          description: Id the person to update
-          type: integer
-          required: True
-        - name: person
-          in: body
-          schema:
-            type: object
-            properties:
-              fname:
-                type: string
-                description: First name of the person
-              lname:
-                type: string
-                description: Last name of the person
-      responses:
-        200:
-          description: Successfully updated person
-          schema:
-            properties:
-              person_id:
+              event_id:
                 type: integer
-                description: Id of the person in the database
-              fname:
+                description: Id of the event
+              event_name:
                 type: string
-                description: First name of the person
-              lname:
+                description: Name of the event
+              event_description:
                 type: string
-                description: Last name of the person
-              timestamp:
+                description: Description of the event
+              event_date:
                 type: string
-                description: Creation/Update timestamp of the person record
-
-    delete:
-      operationId: people.delete
-      tags:
-        - People
-      summary: Delete a person from the people list
-      description: Delete a person
-      parameters:
-        - name: person_id
-          in: path
-          type: integer
-          description: Id of the person to delete
-          required: true
-      responses:
-        200:
-          description: Successfully deleted a person
-
-  /notes:
+                description: Date of the event in word format
+              event_start:
+                type: string
+                description: Start time of event
+              event_end:
+                type: string
+                description: End time of event
+              event_going:
+                type: integer
+                description: Number going to event
+              event_interested:
+                type: integer
+                description: Number interested in event
+              event_status:
+                type: string
+                description: Whether event is past, upcoming or live
+    
+  /events/upcoming:
     get:
-      operationId: notes.read_all
+      operationId: events.upcoming
       tags:
-        - Notes
-      summary: Read the entire set of notes for all people, sorted by timestamp
-      description: Read the entire set of notes for all people, sorted by timestamp
+        - Events
+      summary: Read the set of upcoming events, sorted by closest first
+      description: Read the set of upcoming events, sorted by closest first
       responses:
         200:
-          description: Successfully read notes for all people operation
+          description: Successfully read events set operation
           schema:
             type: array
             items:
               properties:
-                note_id:
+                event_id:
                   type: integer
-                  description: Id of the note
-                content:
+                  description: Id of the event
+                event_name:
                   type: string
-                  description: Content of the note
-                timestamp:
+                  description: Name of the event
+                event_description:
                   type: string
-                  description: Create/Update timestamp of the note
-                person:
-                  type: object
-                  properties:
-                    person_id:
-                      type: integer
-                      description: Id of associated person
-                    fname:
-                      type: string
-                      description: Frist name of associated person
-                    lname:
-                      type: string
-                      description: Last name of associated person
-                    timestamp:
-                      type: string
-                      description: Create/Update timestamp of associated person
+                  description: Description of the event
+                event_date:
+                  type: string
+                  description: Date of the event in word format
+                event_start:
+                  type: string
+                  description: Start time of event
+                event_end:
+                  type: string
+                  description: End time of event
+                event_going:
+                  type: integer
+                  description: Number going to event
+                event_interested:
+                  type: integer
+                  description: Number interested in event
+                event_status:
+                  type: string
+                  description: Whether event is past, upcoming or live
 
-
-  /people/{person_id}/notes:
-    post:
-      operationId: notes.create
-      tags:
-        - Notes
-      summary: Create a note associated with a person
-      description: Create a note associated with a person
-      parameters:
-        - name: person_id
-          in: path
-          description: Id of person associated with note
-          type: integer
-          required: True
-        - name: note
-          in: body
-          description: Text content of the note to create
-          required: True
-          schema:
-            type: object
-            properties:
-              content:
-                type: string
-                description: Text of the note to create
-      responses:
-        201:
-          description: Successfully created a note
-          schema:
-            properties:
-              person_id:
-                type: integer
-                description: Id of the person associated with the note
-              note_id:
-                type: integer
-                description: Id of the created note
-              content:
-                type: string
-                description: Text content of the note
-              timestamp:
-                type: string
-                description: Creation/Update timestamp of the person record
-
-  /people/{person_id}/notes/{note_id}:
+  /events/next:
     get:
-      operationId: notes.read_one
+      operationId: events.next
       tags:
-        - Notes
-      summary: Read a particular note associated with a person
-      description: Read a particular note associated with a person
-      parameters:
-        - name: person_id
-          in: path
-          description: Id of person associated with note
-          type: integer
-          required: True
-        - name: note_id
-          in: path
-          description: Id of note
-          type: integer
-          required: True
+        - Events
+      summary: Read the next event
+      description: Read the next event
       responses:
         200:
-          description: Successfully read note for a person
+          description: Successfully read next event
           schema:
-            type: object
-            properties:
-              note_id:
-                type: integer
-                description: Id of the note
-              person_id:
-                type: integer
-                description: Id of the person note associated with
-              content:
-                type: string
-                description: Text content of the note
-              timestamp:
-                type: string
-                description: Creation/Update timestamp of the note record
-
-    put:
-      operationId: notes.update
-      tags:
-        - Notes
-      summary: Update a note associated with a person
-      description: Update a note associated with a person
-      parameters:
-        - name: person_id
-          in: path
-          description: Id the person to update
-          type: integer
-          required: True
-        - name: note_id
-          in: path
-          description: Id of the note associated with a person
-          type: integer
-          required: True
-        - name: note
-          in: body
-          schema:
-            type: object
-            properties:
-              content:
-                type: string
-                description: Text content of the note to updated
-      responses:
-        200:
-          description: Successfully updated note
-          schema:
-            properties:
-              note_id:
-                type: string
-                description: Id of the note associated with a person
-              person_id:
-                type: integer
-                description: Id of the person in the database
-              content:
-                type: string
-                description: Text content of the updated note
-              timestamp:
-                type: string
-                description: Creation/Update timestamp of the note record
-
-    delete:
-      operationId: notes.delete
-      tags:
-        - Notes
-      summary: Delete a note associated with a person
-      description: Delete a note associated with a person
-      parameters:
-        - name: person_id
-          in: path
-          description: Id of person associated with note
-          type: integer
-          required: True
-        - name: note_id
-          in: path
-          description: Id of note
-          type: integer
-          required: True
-      responses:
-        200:
-          description: Successfully deleted a note
-
-
+            type: array
+            items:
+              properties:
+                event_id:
+                  type: integer
+                  description: Id of the event
+                event_name:
+                  type: string
+                  description: Name of the event
+                event_description:
+                  type: string
+                  description: Description of the event
+                event_date:
+                  type: string
+                  description: Date of the event in word format
+                event_start:
+                  type: string
+                  description: Start time of event
+                event_end:
+                  type: string
+                  description: End time of event
+                event_going:
+                  type: integer
+                  description: Number going to event
+                event_interested:
+                  type: integer
+                  description: Number interested in event
+                event_status:
+                  type: string
+                  description: Whether event is past, upcoming or live
+            
